--- a/src/components/Dashboard/assets/styles/Dashboard.css
+++ b/src/components/Dashboard/assets/styles/Dashboard.css
@@ -1,9 +1,231 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
+
+/* Toggle color */
+
+/* - Toggle: linear gradient hsl(210, 78%, 56%) to hsl(146, 68%, 55%) */
+
 html {
   width: 100%;
   height: 100%;
 }
 
 body {
+  font-family: Inter;
   width: 100%;
   height: 100%;
+}
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: auto;
+}
+
+.headerContainer {
+  margin-top: 25px;
+  width: 90%;
+  height: auto;
+}
+
+.title {
+  width: 90%;
+  font-weight: 700;
+  font-size: 1.5rem;
+}
+
+.followersTitle {
+  width: 90%;
+  font-weight: 700;
+  font-size: 0.9rem;
+  color: hsla(0, 0%, 0%, 0.5);
+  margin-top: -0.6rem;
+}
+
+.darkModeContainer {
+  border-top: 1px solid black;
+  width: 100%;
+}
+
+.darkMode {
+  font-size: 0.9rem;
+  color: hsla(0, 0%, 0%, 0.5);
+  font-weight: 700;
+}
+
+.mainContainer {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.articleContainer {
+  width: 90%;
+  height: auto;
+}
+
+.sectionFollowerBoxes {
+  width: 100%;
+  height: auto;
+}
+
+.boxesContainer {
+  width: 100%;
+  height: auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(auto, auto));
+  gap: 1rem;
+}
+
+.boxesContainer > * {
+  background-color: hsl(227, 47%, 96%);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border-radius: 0.3rem;
+}
+
+/* FACEBOOX BOX */
+
+.boxFacebookContainer {
+  border-top: 4px solid hsl(208, 92%, 53%);
+}
+
+.iconFacebook {
+  /* background-color: white; */
+  background-image: url("../images/icon-facebook.svg");
+}
+
+.numberFollowers {
+  font-size: 3rem;
+  padding: 0;
+  margin: 0;
+  font-weight: 700;
+}
+
+.followers {
+  margin-top: 0;
+  padding-top: 0;
+  color: hsla(0, 0%, 0%, 0.5);
+  font-weight: 400;
+  font-size: 0.9rem;
+  letter-spacing: 0.3rem;
+}
+.boxTwitterContainer {
+  border-top: 4px solid hsl(203, 89%, 53%);
+}
+
+.boxInstagramContainer {
+  background-image: linear-gradient(to right, hsl(37, 97%, 70%), hsl(329, 70%, 58%));
+  background-repeat: no-repeat;
+  background-size: 100% 4px;
+}
+
+.boxYoutubeContainer {
+  border-top: 4px solid hsl(348, 97%, 39%);
+}
+
+.iconFacebook,
+.iconTwitter,
+.iconInstagram,
+.iconYoutube {
+  width: 6.5rem;
+  height: 1.3rem;
+  text-align: end;
+  background-repeat: no-repeat;
+}
+
+.iconTwitter {
+  background-image: url("../images/icon-twitter.svg");
+}
+
+.iconInstagram {
+  width: 8rem;
+  background-image: url("../images/icon-instagram.svg");
+}
+
+.iconYoutube {
+  background-image: url("../images/icon-youtube.svg");
+}
+
+/* BOXES DAILY DATA */
+
+.sectionBoxesDailyData {
+  width: 100%;
+  height: auto;
+}
+
+.boxesDailyDataContainer {
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(auto, auto));
+  gap: 1rem;
+}
+
+.overviewTitle {
+  grid-column: 1/-1;
+}
+
+.boxFacebookDailyDataContainer,
+.boxYoutubeDailyDataContainer,
+.boxTwitterDailyDataContainer,
+.boxInstagramDailyDataContainer {
+  /* display: flex; */
+  flex-wrap: wrap;
+  width: 100%;
+  grid-column: span 2;
+}
+
+.boxFacebookDailyDataContainer,
+.boxInstagramDailyDataContainer,
+.boxTwitterDailyDataContainer,
+.boxYoutubeDailyDataContainer {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(18rem, 1fr));
+  grid-template-rows: repeat(auto-fit, minmax(auto, auto));
+  gap: 1rem;
+}
+
+/* FACEBOOK BOX */
+
+.boxFacebookDailyDataContainer > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: hsl(227, 47%, 96%);
+}
+
+/* INSTAGRAM BOX */
+
+.boxInstagramDailyDataContainer > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: hsl(227, 47%, 96%);
+}
+
+/* TWITTER BOX */
+
+.boxTwitterDailyDataContainer > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: hsl(227, 47%, 96%);
+}
+
+/* YOUTUBE BOX */
+
+.boxYoutubeDailyDataContainer > * {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: hsl(227, 47%, 96%);
+}
+
+.FacebooxFirstBox {
 }
