--- a/src/components/Dashboard/assets/styles/Dashboard.css
+++ b/src/components/Dashboard/assets/styles/Dashboard.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap");
 
+/* VARIABLES FOR LIGHT THEME */
+
 :root {
   --body-bg-color: hsl(0, 0%, 100%);
   --card-bg-color: hsl(227, 47%, 96%);
@@ -9,6 +11,8 @@
 
   /* --light-theme-toggle-bg-color: hsl(230, 22%, 74%); */
 }
+
+/* VARIABLES FOR DARK THEME */
 
 html:not(.style-scope)[dark] {
   --body-bg-color: hsl(230, 17%, 14%);
@@ -39,6 +43,8 @@ body {
 
   height: auto;
 }
+
+/* TOGGLE STYLES */
 
 /* The switch - the box around the slider */
 
@@ -87,7 +93,9 @@ input:checked + .slider:before {
   -ms-transform: translateX(26px);
   transform: translateX(26px);
 }
+/* FINISH TOGGLE STYLES */
 
+/* HEADER STYLES */
 .headerContainer {
   margin-top: 2rem;
   width: 90%;
@@ -127,7 +135,9 @@ input:checked + .slider:before {
   color: var(--text-opacity-color);
   font-weight: 700;
 }
+/* FINISH HEADER STYLES */
 
+/* MAIN TAG STYLES */
 .mainContainer {
   width: 100%;
   height: 45rem;
@@ -141,6 +151,7 @@ input:checked + .slider:before {
   margin-top: 2rem;
 }
 
+/* FALLOWERS SECTION TAG STYLES */
 .sectionFollowerBoxes {
   width: 100%;
   height: auto;
@@ -155,6 +166,7 @@ input:checked + .slider:before {
   gap: 1rem;
 }
 
+/* CENTERING EVERTHING INSIDE OF BOXES CONTAINER. NOTICE I USED THE "> *" SELECTOR   */
 .boxesContainer > * {
   background-color: var(--card-bg-color);
   display: flex;
@@ -166,8 +178,7 @@ input:checked + .slider:before {
   padding-bottom: 1.4rem;
 }
 
-/* FACEBOOX BOX */
-
+/* GIVING EACH BOX A BORDER COLOR */
 .boxFacebookContainer {
   border-top: 4px solid hsl(208, 92%, 53%);
 }
@@ -185,11 +196,9 @@ input:checked + .slider:before {
 .boxYoutubeContainer {
   border-top: 4px solid hsl(348, 97%, 39%);
 }
+/*FINISHED GIVING EACH BOX A BORDER COLOR */
 
-.iconFacebook {
-  background-image: url("../images/icon-facebook.svg");
-}
-
+/* STYLING EACH ICON */
 .iconFacebook,
 .iconTwitter,
 .iconInstagram,
@@ -200,6 +209,12 @@ input:checked + .slider:before {
   margin: 1.8rem 0 1.5rem 0;
   text-align: end;
   background-repeat: no-repeat;
+}
+/* FINISHED */
+
+/* GIVING TO EACH BOX THE SOCIAL MEDIA ICON. NOTE THAT I PUT THE ICON INSIDE OF THE "P" TAG WHERE THE ACOUNT NAME IS  */
+.iconFacebook {
+  background-image: url("../images/icon-facebook.svg");
 }
 
 .iconTwitter {
@@ -214,7 +229,9 @@ input:checked + .slider:before {
 .iconYoutube {
   background-image: url("../images/icon-youtube.svg");
 }
+/* FINISHED */
 
+/* NUMBER OF  FOLLOWERS STYLES*/
 .numberFollowers {
   color: var(--number-color);
   font-size: 3rem;
@@ -227,21 +244,21 @@ input:checked + .slider:before {
   margin-top: 0;
   margin-bottom: 1.5rem;
   padding-top: 0;
-
   color: var(--text-opacity-color);
   font-weight: 400;
   font-size: 0.9rem;
   letter-spacing: 0.3rem;
 }
+/* FINISHED */
 
-/* BOXES DAILY DATA */
-
+/*  BOXES SECTION DAILY DATA */
 .sectionBoxesDailyData {
   margin-top: 2rem;
   width: 100%;
   height: auto;
 }
 
+/* GIVING THE WRAPPER OF THE CONTAINERS STYLES   */
 .boxesDailyDataContainer {
   width: 100%;
   display: grid;
@@ -249,12 +266,14 @@ input:checked + .slider:before {
   grid-template-rows: repeat(auto-fit, minmax(auto, auto));
   gap: 1rem;
 }
+/* FINISHED */
 
 .overviewTitle {
   color: var(--text-opacity-color);
   grid-column: 1/-1;
 }
 
+/* STYLES OF EACH SOCIAL MEDIA CONTAINER INSIDE OF THE WRAPPER   */
 .boxFacebookDailyDataContainer,
 .boxInstagramDailyDataContainer,
 .boxTwitterDailyDataContainer,
@@ -267,8 +286,7 @@ input:checked + .slider:before {
   gap: 1rem;
 }
 
-/* FACEBOOK BOX */
-
+/* CENTERING EVERYTHING INSIDE OF EACH SOCIAL MEDIA CONTAINER ONCE AGAIN I USED "> *" SELECTOR */
 .boxFacebookDailyDataContainer > *,
 .boxInstagramDailyDataContainer > *,
 .boxTwitterDailyDataContainer > *,
@@ -281,7 +299,9 @@ input:checked + .slider:before {
   background-color: var(--card-bg-color);
   border-radius: 0.3rem;
 }
+/* FINISHED */
 
+/* CHANGING ORDERS */
 .InstagramSecondBox {
   order: -1;
 }
@@ -289,7 +309,9 @@ input:checked + .slider:before {
 .YoutubeSecondBox {
   order: -1;
 }
+/* FINISHED */
 
+/* ICON STYLES */
 .FacebookType {
   background-image: url("../images/icon-facebook.svg");
 }
@@ -314,9 +336,9 @@ input:checked + .slider:before {
   background-position: right;
   height: 1.3rem;
 }
+/* FINISHED ICON STYLES */
 
 /* COMMON STYLES AMONG ALL DAILY DATA, FIRST AND SECOND BOX */
-
 .FacebookType,
 .InstagramType,
 .TwitterType,
@@ -330,6 +352,7 @@ input:checked + .slider:before {
 
 .total,
 .likes {
+  color: var(--number-color);
   padding: 0;
   margin-top: 1.5rem;
   margin-bottom: 0;
@@ -363,12 +386,9 @@ input:checked + .slider:before {
 .likesDecrement {
   color: hsl(356, 69%, 56%);
 }
+/* FINISHED */
 
 @media screen and (min-width: 990px) {
-  #root {
-    width: auto;
-  }
-
   .headerContainer {
     width: 77%;
     margin-top: 1rem;
